Fix spring version